--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -4,7 +4,7 @@
     <string name="ble_not_supported">Вибачте, bluetooth LE не підтримується Вашим пристроєм</string>
     <string name="action_scan_start">Сканування</string>
     <string name="beacon_not_found">Мітку не знайдено</string>
-    <string name="action_connect">З'єднання</string>
+    <string name="action_connect">З\'єднання</string>
     <string name="start_immediate_alert">Включити тривогу</string>
     <string name="stop_immediate_alert">Виключити тривогу</string>
     <string name="link_background">Завжди включено</string>
@@ -17,12 +17,12 @@
     <string name="link_background_summary">Включити додаткові можливості</string>
     <string name="battery_info">Про батарейку</string>
     <string name="immediate_alert_summary">Тривога мітки</string>
-    <string name="welcome_text">Запрошуєм в iTracing2.\n\n Ця програма допоможе в під'єднанні мітки до телефону (Quintic PROXR) по bluetooth.\n
-        Якщо у Вас є мітка Bluetooth LE , то програма &quot;iTracing&quot; допоможе комфортно ним користуватися:)\n\n
+    <string name="welcome_text">Запрошуєм в iTracing2.\n\n Ця програма допоможе в під\'єднанні мітки до телефону (Quintic PROXR) по bluetooth.\n
+        Якщо у Вас є мітка Bluetooth LE, то програма &quot;iTracing&quot; допоможе комфортно ним користуватися:)\n\n
         Будь  ласка ввімкніть мітку.\n\n
         Повинно появитися вікно з інформацією.\n
         Якщо вікно порожнє, то виключте/включіть мітку ITAG та повторіть спробу.\n\n
-        Якщо зв'язок періодично втрачається, включіть в меню налаштувань "Фоновий зв'язок".\n\n
+        Якщо зв\'язок періодично втрачається, включіть в меню налаштувань "Фоновий зв\'язок".\n\n
         Автор працює над програмою iTracing2 тільки в свій вільний час ;-)</string>
     <string name="donate">Віддячити автору(PayPal)</string>
     <string name="feedback">Відгуки</string>
@@ -30,9 +30,9 @@
     <string name="feedback_summary">не стидайтися, це прискорить вихід нових версій. Дякую!</string>
     <string name="display_last_position">Показати останнє місцеположення</string>
     <string name="out_of_range_action">Втрата мітки</string>
-    <string name="out_of_range_action_summary">Дія при втраті зв'язку</string>
+    <string name="out_of_range_action_summary">Дія при втраті зв\'язку</string>
     <string name="action_on_power_off">Відключити Bluetooth</string>
-    <string name="action_on_power_off_summary">Відключити Bluetooth при втраті зв'язку</string>
+    <string name="action_on_power_off_summary">Відключити Bluetooth при втраті зв\'язку</string>
     <string name="ring_tone_summary">Виберіть мелодію</string>
     <string name="ring_tone">Мелодія</string>
     <string name="rssi_info">Рівень сигналу</string>
@@ -53,12 +53,12 @@
     <string name="foreground_started">Включено фоновий режим</string>
     <string name="preferences">Налаштування</string>
     <string name="dashboard">Статусс</string>
-    <string name="action_foreground_summary">Поліпшує зв'язок між пристроями</string>
+    <string name="action_foreground_summary">Поліпшує зв\'язок між пристроями</string>
     <string name="action_foreground">фоновий режим</string>
     <string name="ring_the_device">Включити звук на мітці</string>
     <string name="events_history">Історія подій</string>
-    <string name="connected_action">Після з'єднання</string>
-    <string name="connected_action_summary">Дія відбувається після з'єднання </string>
+    <string name="connected_action">Після з\'єднання</string>
+    <string name="connected_action_summary">Дія відбувається після з\'єднання</string>
     <string name="clear_events">Очистити журнал подій</string>
     <string name="confirm_remove_events">Підтвердіть видалення</string>
     <string name="export_events">експорт</string>
