--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -63,17 +63,21 @@
     <string name="confirm_remove_events">Подтвердить удаление события</string>
     <string name="export_events">экспорт</string>
     <string-array name="button_actions">
+        <item>toggle ring the phone</item>
         <item>звонок в телефоне</item>
-        <item>вибрация в телефоне</item>
         <item>отзвонить</item>
+        <item>toggle vibrate the phone</item>
+        <item>вибрация в телефоне</item>
         <item>остановить вибрации</item>
         <item>сохранить мою позицию</item>
         <item>открыть URL или другое действие</item>
     </string-array>
     <string-array name="button_actions_values">
+        <item>TOGGLE_RING_PHONE</item>
         <item>START_RING_PHONE</item>
-        <item>START_VIBRATE_PHONE</item>
         <item>STOP_RING_PHONE</item>
+        <item>TOGGLE_VIBRATE_PHONE</item>
+        <item>START_VIBRATE_PHONE</item>
         <item>STOP_VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
         <item>CUSTOM_ACTION</item>
