--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,6 +29,8 @@
     <string name="out_of_range_action_summary">quelle est l\'action associée ?</string>
     <string name="action_on_power_off">perte de liaison à l\'extinction</string>
     <string name="action_on_power_off_summary">perte de liaison si porte-clés ou le bluetooth s\'éteint</string>
+    <string name="action_bip_out_of_range">bip de l\'Itag</string>
+    <string name="action_bip_out_of_range_summary">bip is hors de portée</string>
     <string name="ring_tone_summary">sélectionner la sonnerie en rapport aux actions</string>
     <string name="ring_tone">sonnerie</string>
     <string name="rssi_info">qualité du signal</string>
