--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
         <item>start vibrate the phone</item>
         <item>stop vibrate the phone</item>
         <item>capture my position</item>
+        <item>toggle AudioManager Play/Pause</item>
         <item>call a url or broadcast intent action</item>
     </string-array>
     <string-array name="button_actions_values">
@@ -82,6 +83,7 @@
         <item>START_VIBRATE_PHONE</item>
         <item>STOP_VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
+        <item>TOGGLE_PLAY_PAUSE</item>
         <item>CUSTOM_ACTION</item>
     </string-array>
     <string-array name="empty_array"/>
